@@ -1,3 +1,8 @@
+== 2010-11-30
+
+Bug Fixes:
+  * Temporarily disable sanitization of dates due to some problems. Will be fixed in 0.2.5
+
 == 2010-11-29
 
 Enhancements:
